--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+
+  .heading {
+    font-family: 'Bigelow Rules', cursive;
+    font-size: 72px;
+    color: #0ccac4;
+  }
 }
 
 .App-logo {
