Load github users as a monsters

--- a/src/components/card/Card.styles.scss
+++ b/src/components/card/Card.styles.scss
@@ -4,12 +4,18 @@
   background-color: #95dada;
   border: 1px solid grey;
   border-radius: 5px;
+  align-items: center;
   padding: 25px;
   cursor: pointer;
   -moz-osx-font-smoothing: grayscale;
   backface-visibility: hidden;
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
+  margin: 10px;
+
+  img {
+    width: 200px;
+  }
 }
 
 .card-container:hover {
