--- a/src/components/card-list/card-list.styles.scss
+++ b/src/components/card-list/card-list.styles.scss
@@ -1,7 +1,9 @@
 .card-list {
     width: 85vw;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
